fix windows horizontal scroll

--- a/src/app/pages/main/cases-list/cases-list.component.scss
+++ b/src/app/pages/main/cases-list/cases-list.component.scss
@@ -1,6 +1,5 @@
 .some-projects {
   width: 100%;
-  height: 100%;
 
   .title {
     padding: 0 0 0 3.6458333333333335vw;
@@ -16,6 +15,7 @@
   }
 
   .project-list {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     margin-top: 2.0833333333333335vw;
@@ -27,7 +27,7 @@
       height: 31.666666666666668vw;
       justify-content: space-between;
       flex-wrap: wrap;
-      background-color: #fff;
+      background-color: #ffffff;
       padding: 1.5625vw 1vw 1vw 1.5625vw;
       border-radius: 2.34375vw;
 
@@ -35,7 +35,7 @@
         width: 50%;
 
         p {
-          color: #fff;
+          color: #ffffff;
           font-size: 2.34375vw;
           margin: 0;
           line-height: 1;
@@ -147,7 +147,7 @@
           background-color: #201f1e;
 
           a {
-            color: #fff;
+            color: #ffffff;
           }
         }
       }
@@ -206,7 +206,7 @@
 
     .pn,
     .bequick {
-      width: 49.1445vw;
+      width: 49.7%;
     }
 
     .development-stage {
@@ -255,7 +255,7 @@
         height: 100%;
         align-items: center;
         justify-content: center;
-        color: #fff;
+        color: #ffffff;
         font-size: 3.6458333333333335vw;
 
         span {
