--- a/src/app/pages/main/how-we-working/how-we-working.component.scss
+++ b/src/app/pages/main/how-we-working/how-we-working.component.scss
@@ -1,7 +1,4 @@
 .how-we-working {
-  width: 100%;
-  height: 100%;
-
   .title {
     color: #ffffff60;
     font-size: 5.208333333333333vw;
@@ -41,8 +38,8 @@
 
     .dedicated-team,
     .designers-outstaffing {
-      width: 49vw;
-      background-color: #fff;
+      width: 49.7%;
+      background-color: #ffffff;
 
       .block-title {
         p {
@@ -82,6 +79,7 @@
 
     .special-conditions {
       width: 100%;
+      height: 26.145833333333332vw;
 
       .block-title {
         p {
@@ -92,16 +90,16 @@
     }
 
     .special-conditions {
+      display: flex;
+      flex-direction: column;
       background-color: #f3da80;
-      padding: 1.5625vw 2.0833333333333335vw 2vw 2.0833333333333335vw;
+      padding: 2.0833333333333335vw 3.125vw 2vw 2.0833333333333335vw;
 
       .block-wrapper {
         display: flex;
         justify-content: space-between;
 
-        .block-description {
-          margin-top: 2.9761904761904763vw;
-        }
+        margin-top: auto;
 
         .block-info {
           display: flex;
