--- a/src/app/pages/main/short-about/short-about.component.scss
+++ b/src/app/pages/main/short-about/short-about.component.scss
@@ -4,6 +4,8 @@
   background-color: white;
   border-radius: 3.125vw;
 
+  padding: 1.8229166666666667vw 1.8229166666666667vw 3.1vw 1.8229166666666667vw;
+
   .cursive {
     font-family: NewYorkItalic;
     font-style: italic;
@@ -13,7 +15,6 @@
     color: #201f1e;
     width: 100%;
     height: 100%;
-    padding: 1.8229166666666667vw;
     font-size: 5.208333333333333vw;
 
     img {
