--- a/src/app/shared/lets-work/lets-work.component.scss
+++ b/src/app/shared/lets-work/lets-work.component.scss
@@ -1,18 +1,18 @@
 .lets-work {
   position: absolute;
-  width: 98.95833333333333vw;
+  width: 98.8%;
   height: 33.125vw;
 
   display: flex;
   flex-direction: column;
 
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 2.6041666666666665vw 0 2.0833333333333335vw 2.0833333333333335vw;
   border-radius: 3.5vw;
 
   .title {
     p {
-      color: #000;
+      color: #000000;
       font-size: 5.729166666666667vw;
     }
   }
@@ -44,7 +44,7 @@
       text-decoration: none;
 
       p {
-        color: #fff;
+        color: #ffffff;
         font-size: 2.6041666666666665vw;
       }
     }
